@@ -4,15 +4,14 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.statistics.dto.ViewStats;
 import ru.practicum.statistics.mapper.HitMapper;
 import ru.practicum.statistics.repository.StatisticRepository;
 import ru.practicum.statistics.dto.HitDto;
 import ru.practicum.statistics.model.Hit;
 
+import java.math.BigInteger;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -29,21 +28,43 @@ public class StatisticsServiceImpl implements StatisticsService {
     }
 
     @Override
-    public List<ViewStats> getStatistics(LocalDateTime startTime, LocalDateTime endTime, String[] uriArray, boolean unique) {
-        List<ViewStats> list;
-
+    public List<HitDto> getStatistics(LocalDateTime startTime, LocalDateTime endTime, String[] uriArray, boolean unique) {
+        List<Object> list = null;
+        List<HitDto> listHits = new ArrayList<>();
+        List<HitDto> resultListHits = new ArrayList<>();
         if (unique) {
-            list = statisticRepository.countTotalperUriUniqueIp(startTime, endTime);
+            list = statisticRepository.findAllHitsWithUniqueIp(startTime, endTime);
+            list.forEach(obj -> {
+                Object[] array = (Object[]) obj;
+                array[2] = BigInteger.valueOf(1);
+            });
         } else {
-            list = statisticRepository.countTotalperUri(startTime, endTime);
+            list = statisticRepository.findAllHits(startTime, endTime);
         }
-        if (uriArray != null) {
-            if (uriArray.length != 0) {
-                List<String> urisList = List.of(uriArray);
-                list = list.stream().filter(v -> urisList.contains(v.getUri())).collect(Collectors.toList());
+        list.forEach(obj -> {
+            Object[] array = (Object[]) obj;
+            HitDto hitDtoWithStat = new HitDto();
+            hitDtoWithStat.setApp((String) array[0]);
+            hitDtoWithStat.setUri((String) array[1]);
+            hitDtoWithStat.setHits((BigInteger) array[2]);
+            listHits.add(hitDtoWithStat);
+        });
+        if (uriArray != null && listHits.size() > 0) {
+            List<String> uriList = new ArrayList<>(Arrays.asList(uriArray));
+            for (HitDto hitDto : listHits) {
+                if (uriList.contains(hitDto.getUri())) {
+                    resultListHits.add(hitDto);
+                }
             }
         }
-        log.info("Выведен список Hits: {}", list);
-        return list;
+        Collections.sort(resultListHits, new Comparator<HitDto>() {
+            @Override
+            public int compare(HitDto o1, HitDto o2) {
+                return o2.getHits().compareTo(o1.getHits());
+            }
+        });
+        log.info("Выведен список Hits: {}", resultListHits);
+        return resultListHits;
+
     }
 }
